--- a/style.css
+++ b/style.css
@@ -41,6 +41,27 @@ img {
   border: 1px solid black;
   margin: 25px 500px;
  
+
+
 }
-  
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
 
